@@ -1,4 +1,7 @@
 23 Jan 2018
+update: apis will set poster to api poster, if poster unset, without page refresh
+update: book uniformity
+update: tvmaze uniformity
 update: details.php youtube display highest quality video available
 update: imdb info
 remove: unused beep.mp3 and beep.ogg
